# gitpkg

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy.yml  tests.yml
gitpkg/: __main__.py  _version.py  cli.py  config.py  console.py  errors.py  main.py  package_manager.py  pkg_manager.py  utils.py
gitpkg/cli/: add.py
scripts/: format.sh  lint.sh  test.sh
tests/: __init__.py  git_composer.py  test_cli.py  test_utils.py
